--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
       "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
       "@typescript-eslint/prefer-interface": 0,
       "interface-over-type-literal": 0,
+      "@typescript-eslint/no-var-requires": 1,
       "@typescript-eslint/no-inferrable-types": 2,
       "semi": "off",
       "@typescript-eslint/semi": ["error"],
